--- a/styles.css
+++ b/styles.css
@@ -25,7 +25,7 @@ section {
 
 /* Header */
 header {
-  background: #056;
+  background: transparent;
   display: flex;
   justify-content: space-between;
   align-items: center;
